# apertium-hbo

./: .gitignore  Makefile.am  README  apertium-hbo.hbo-ortho.twol  apertium-hbo.hbo-poststress.twol  apertium-hbo.hbo-prestress.twol  apertium-hbo.hbo-stress.twol  apertium-hbo.hbo.lexd  apertium-hbo.hbo.spellrelax  apertium-hbo.hbo.twol  apertium-hbo.hbo.xfst  apertium-hbo.pc.in  configure.ac  modes.xml  normalize.py
corpus/: Makefile  README.md  coverage.sh  get_corpus.py  precision.py  top_forms.sh  top_verbs.sh  unk_pos.sh
speller/: index.xml
test/: analysis-convert-expected.txt  analysis-convert-output.txt  analysis-disam-expected.txt  analysis-disam-output.txt  analysis-input.txt  analysis-morph-expected.txt  analysis-morph-output.txt  analysis-unknown-expected.txt  analysis-unknown-output.txt  generation-generator-expected.txt  generation-generator-gold.txt  generation-generator-output.txt  generation-input.txt  tests.json  אמר-paradigm-generator-expected.txt  אמר-paradigm-generator-gold.txt  אמר-paradigm-input.txt  קטל-paradigm-generator-expected.txt  קטל-paradigm-generator-gold.txt  קטל-paradigm-generator-output.txt  קטל-paradigm-input.txt
